CDPS-1681: Fix alert flag css when flag wraps onto two lines

--- a/src/assets/dps/components/alert-flag/_alert-flag.scss
+++ b/src/assets/dps/components/alert-flag/_alert-flag.scss
@@ -10,7 +10,8 @@
   @media screen {
     justify-content: center;
     border: 3px solid;
-    padding: 0 10px;
+    padding: 5px 10px;
+    height: initial;
     font-size: 16px;
     text-align: center;
     line-height: 1;
@@ -50,7 +51,6 @@
   display: inline-flex;
   align-items: center;
 
-  height: 26px;
   color: black;
   background-color: white;
 
